--- a/NetBeansProjects/PI3/src/main/webapp/css/style.css
+++ b/NetBeansProjects/PI3/src/main/webapp/css/style.css
@@ -57,10 +57,15 @@
 
 .menu a{
   color: #f5f5f5;
-  font-size: 13px;
+  font-size: 100%;
   text-decoration: none;
   text-transform: uppercase;
   padding: 30px;
+}
+
+menu a:hover {
+  color: #cccccc;
+  font-weight: bold;
 }
 
 /* TÍTULO DA PÁGINA */
@@ -98,6 +103,25 @@ hr {
   margin-top: 200px;
 }
 
+@media (max-width: 1090px){
+  .container__menu__principal{
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 700px) {
+  .container__menu__principal {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  header img {
+    margin-bottom: 10px;
+  }
+}
+
 /* CONTAINER DA TELA DE LOGIN */
 .container__login{
   border: 1px solid #ced4da;
@@ -124,7 +148,6 @@ hr {
 .dropdown img{
   display: flex;
   justify-content: center;
-  width: 60%;
   height: 60%;
   margin: 12%;
 }
@@ -148,11 +171,13 @@ hr {
 
 .dropdown-content {
   display: none;
-  position: absolute;
-  background-color: #f9f9f9;
+  background-color: #f4f4f4;
   min-width: 200px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
+  min-height: 40px;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 0 0 5px 5px;
+  border: 0px 0px 0px 0px #6e6c6c2c;
 }
 
 .dropdown-content a {
@@ -163,7 +188,9 @@ hr {
   display: block;
 }
 
-.dropdown-content a:hover {background-color: #e2dddd}
+.dropdown-content a:hover {
+  background-color: #e2dddd
+}
 
 .dropdown:hover .dropdown-content {
   display: block;
