--- a/NetBeansProjects/PI3/src/main/webapp/css/style.css
+++ b/NetBeansProjects/PI3/src/main/webapp/css/style.css
@@ -14,6 +14,12 @@
   border-bottom: #068574 3px solid;
 }
 
+.botoes{
+    display: flex;
+    flex-direction: row;
+    margin-top: 40px;
+}
+
 .header h1 {
   font-size: 30px;
   color: #119b9b;
@@ -258,25 +264,6 @@ hr {
   text-transform: uppercase;
   color: #f5f5f5;
   margin-top: 40px;
-  margin-right: 20px;
-  cursor: pointer;
-  transition: 300ms;
-}
-
-/* ESTILO DE BOTÃO PESQUISA DE RELATÓRIO (Quase igual ao botão padrão, é necessário?) */
-.btn-PesquisaRelatorio{
-  width: 200px;
-  height: 50px;
-  border-radius: 5px;
-  border: none;
-  text-align: center;
-  line-height: 40px;
-  background-color: #119b9b;
-  text-decoration: none;
-  font-size: 15px;
-  font-weight: bold;
-  text-transform: uppercase;
-  color: #f5f5f5;
   margin-right: 20px;
   cursor: pointer;
   transition: 300ms;
