--- a/NetBeansProjects/PI3/src/main/webapp/css/style.css
+++ b/NetBeansProjects/PI3/src/main/webapp/css/style.css
@@ -48,14 +48,14 @@
 .menu{
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-around;
   align-items: center;
   background-color: #0b3a3a;
   width: 100%;
   height: 40px;
 }
 
-.menu a{
+.menu menu__topo{
   color: #f5f5f5;
   font-size: 100%;
   text-decoration: none;
@@ -63,7 +63,7 @@
   padding: 30px;
 }
 
-menu a:hover {
+menu menu__topo:hover {
   color: #cccccc;
   font-weight: bold;
 }
