--- a/NetBeansProjects/PI3/src/main/webapp/css/style.css
+++ b/NetBeansProjects/PI3/src/main/webapp/css/style.css
@@ -129,8 +129,8 @@ hr {
 /* CONTAINER DA TELA DE LOGIN */
 .container__login{
     border: 1px solid #ced4da;
-    width: 420px;
-    height: 300;
+    width: 500px;
+    height: 450px;
     margin: 140px auto 0px;
     border-radius: 5px;
     align-items: center;
@@ -370,6 +370,28 @@ th {
 
 th, td {
     padding: 0.2em 2em;
+}
+
+/* FOOTER */
+footer{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0;
+    background-color: #0b3a3a;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+}
+
+footer  a{
+    color: #f5f5f5;
+    font-size: 18px;
+}
+
+footer p{
+    color: #f5f5f5;
+    margin: 5px 0;
 }
 
 /*Modificadores para correcoes de CSS*/
